syntax = "proto3";

package orders;
option go_package = "rpc/orders";

service Orders {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
  rpc GetAllOrders(GetAllOrdersRequest) returns (GetAllOrdersResponse);
  rpc GetAllOrdersByUserId(GetAllOrdersByUserIdRequest) returns (GetAllOrdersByUserIdResponse);
}

message GetOrderRequest { string id = 1; }

message GetOrderResponse { Order order = 1; }

message CreateOrderRequest {
  string user_id = 1;
  string item = 2;
  string adress = 3;
  int64 count = 4;
}

message CreateOrderResponse { Order order = 1; }

message UpdateOrderRequest { Order order = 1; }

message UpdateOrderResponse { Order order = 1; }

message DeleteOrderRequest { string id = 1; }

message DeleteOrderResponse { string id = 1; }

message GetAllOrdersRequest {}

message GetAllOrdersResponse { repeated Order orders = 1; }

message GetAllOrdersByUserIdRequest { string userId = 1; }

message GetAllOrdersByUserIdResponse { repeated Order orders = 1; }

message Order {
  string id = 1;
  string user_id = 2;
  string item = 3;
  string adress = 4;
  int64 count = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}
